# unimrcp

./: INSTALL  PLUGININSTALL  README  configure.ac
conf/: unimrcpserver.xml
libs/mrcp-engine/src/: mrcp_recog_state_machine.c
libs/mrcp/resources/include/: mrcp_recog_header.h  mrcp_recog_resource.h
libs/mrcp/resources/src/: mrcp_recog_header.c  mrcp_recog_resource.c
plugins/: Makefile.am
plugins/nls-recog/: CMakeLists.txt  Makefile.am  nlsrecog.vcproj  nlsrecog.vcxproj  nlsrecog.vcxproj.filters
plugins/nls-recog/conf/: nlsrecog.xml
plugins/nls-recog/include/: nls_asr.h
plugins/nls-recog/src/: nls_asr.cpp  nls_recog_engine.cpp
plugins/nls-synth/: CMakeLists.txt  Makefile.am  nlssynth.vcproj  nlssynth.vcxproj  nlssynth.vcxproj.filters
plugins/nls-synth/conf/: nlssynth.xml
plugins/nls-synth/src/: nls_synth_engine.cpp  nls_tts.cpp
plugins/nls2-recog/: CMakeLists.txt  Makefile.am
plugins/nls2-recog/conf/: nls2recog.xml
plugins/nls2-recog/include/: nls2_asr.h
plugins/nls2-recog/src/: nls2_asr.cpp  nls2_recog_engine.cpp
plugins/nls2-synth/: CMakeLists.txt  Makefile.am
plugins/nls2-synth/conf/: nls2synth.xml
plugins/nls2-synth/include/: nls2_tts.h  nls_tts.h
plugins/nls2-synth/src/: nls2_synth_engine.cpp  nls2_tts.cpp
plugins/xfyun-recog/: CMakeLists.txt  Makefile.am
plugins/xfyun-synth/: CMakeLists.txt  Makefile.am
