MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

if XFYUNSYNTH_PLUGIN
SUBDIRS               += xfyun-synth
endif

if XFYUNRECOG_PLUGIN
SUBDIRS               += xfyun-recog
endif

if NLSSYNTH_PLUGIN
SUBDIRS               += nls-synth
endif

if NLSRECOG_PLUGIN
SUBDIRS               += nls-recog
endif

if DEMOSYNTH_PLUGIN
SUBDIRS               += demo-synth
endif

if DEMORECOG_PLUGIN
SUBDIRS               += demo-recog
endif

if DEMOVERIFIER_PLUGIN
SUBDIRS               += demo-verifier
endif

if RECORDER_PLUGIN
SUBDIRS               += mrcp-recorder
endif
